fixed bug with scroll being stuck on 0 scrollLeft

--- a/Frontend/src/components/VirtualScroll/HorizontalVirtualScoll/HorizontalVirtualScroll.module.scss
+++ b/Frontend/src/components/VirtualScroll/HorizontalVirtualScoll/HorizontalVirtualScroll.module.scss
@@ -16,7 +16,7 @@
   height: 100%;
   width: 100%;
   user-select: none;
-  overflow: hidden; //hidden default, scroll for testing purposes
+  overflow: scroll; //hidden default, scroll for testing purposes
   z-index: 2;
   // will-change: scroll-position, transform;
 }
